place API setup, listscreen completed

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ generated/
 
 # Local configuration file (sdk path, etc)
 local.properties
+secrets.properties
 
 # Eclipse project files
 .classpath
